--- a/html-css.html
+++ b/html-css.html
@@ -24,17 +24,19 @@
       </ul>
     </nav>
 
-    <div>
+    <div class="containerhtmlcss">
         <h1>HTML/CSS</h1>
-        <img src="./img/html.png" alt="">
-        <div>
-            <h2>Wat is Html/CSS?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis iure esse fuga magnam ab tempora vitae reiciendis corrupti, at illum mollitia explicabo, error, sunt suscipit nesciunt in? Dolore quas maiores deserunt sint facilis sit laborum ea nam, voluptas saepe delectus iure quidem magni. Reiciendis ipsam nam corporis, magnam aut ex?</p>
+        <div class="containerimghtmlcss">
+          <img class="imghtmlcss" src="./img/html.png" alt="">
+        <div class="htmlcss">
+            <h2>Wat is <span class="colorhtml">Html</span>/<span class="colorcss">CSS</span>?</h2>
+            <p class="phtmlcss">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis iure esse fuga magnam ab tempora vitae reiciendis corrupti, at illum mollitia explicabo, error, sunt suscipit nesciunt in? Dolore quas maiores deserunt sint facilis sit laborum ea nam, voluptas saepe delectus iure quidem magni. Reiciendis ipsam nam corporis, magnam aut ex?</p>
             
+        </div>
         </div>
     </div>
 
-    <footer style="background-color: #00A8C7 ;">Copyright Techniek College Rotterdam</footer>
+    <footer class="footerhtmlcss" style="background-color: #00A8C7 ;">Copyright Techniek College Rotterdam</footer>
 
 
   </body>
