--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Opdracht 3</title>
+    <link rel="stylesheet" href="styleindex.css">
   </head>
   <body>
     <nav>
@@ -25,7 +26,7 @@
       </ul>
     </nav>
 
-    <img class="background" src="./img/background.jpeg" alt="">
+    
 
     <h1>First Year TCR Programming Langueses </h1>
   </body>
