--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       </ul>
     </nav>
 
-    
+    <img  src="img/background.jpeg" alt="background-image">
+
 
     <h1>First Year TCR Programming Langueses </h1>
   </body>
