--- a/html-css.html
+++ b/html-css.html
@@ -36,6 +36,10 @@
         </div>
     </div>
 
+    <div class="dropmain">
+      
+    </div>
+
     <footer class="footerhtmlcss" style="background-color: #00A8C7 ;">Copyright Techniek College Rotterdam</footer>
 
 
