--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styleindex.css">
   </head>
   <body>
+    
     <nav>
       <img href="index.html" src="./img/hacker.png" id="logo" />
       <ul>
@@ -26,9 +27,14 @@
       </ul>
     </nav>
 
-    <img  src="img/background.jpeg" alt="background-image">
+    <div class="main">
+
+      <h1 class="c2">First Year TCR Programming Langueses </h1>
+
+    </div>
 
 
-    <h1>First Year TCR Programming Langueses </h1>
+
+    
   </body>
 </html>
