--- a/dropdown.html
+++ b/dropdown.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav>
-      <img src="./img/hacker.png" id="logo" />
+       <img src="./img/hacker.png" id="logo"> 
       <ul>
         <li><a href="html-css.html" target="_blank">HTML/CSS</a></li>
         <li><a href="javascript.html" target="_blank">Javascript</a></li>
@@ -24,5 +24,9 @@
         <li><a href="#" target="_blank">Jaar 2</a></li>
       </ul>
     </nav>
+
+    <div class="main">
+      <h1 class="c2" >First Year TCR Programming Langueses</h1>
+    </div>
   </body>
 </html>
