--- a/javascript.html
+++ b/javascript.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Opdracht 3</title>
   </head>
-  <body>
+  <body class="javabody">
     <nav>
       <img  src="./img/hacker.png" id="logo" />
       <ul>
@@ -25,13 +25,16 @@
       </ul>
     </nav>
 
-    <div>
-        <h1>Javascript</h1>
-        <div>
-            <h2>Wat is Javascript?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro libero reprehenderit eius aspernatur ipsa deleniti voluptatum, ea earum voluptate, eaque velit tenetur, incidunt illum. Consectetur eligendi facere laudantium nam optio tempora illo, perferendis ducimus obcaecati similique adipisci, hic autem aut commodi quas reprehenderit quaerat nobis impedit officiis eum! Quia, fugiat.</p>
+    <div class="javacontainer">
+        <h1 class="hoofdstukjava">Javascript</h1>
+        <div class="alljava">
+          <div class="containerph2">
+            <h2 class="javah2">Wat is <span class="colorjava">Javascript</span>?</h2>
+            <p class="javap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro libero reprehenderit eius aspernatur ipsa deleniti voluptatum, ea earum voluptate, eaque velit tenetur, incidunt illum. Consectetur eligendi facere laudantium nam optio tempora illo, perferendis ducimus obcaecati similique adipisci, hic autem aut commodi quas reprehenderit quaerat nobis impedit officiis eum! Quia, fugiat.</p>
+          </div>
+        <img class="imgjava" src="./img/javascript.png" alt="">
         </div>
-        <img src="./img/javascript.png" alt="">
+        
     </div>
 
 
