--- a/mysql.html
+++ b/mysql.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Opdracht 3</title>
   </head>
-  <body>
+  <body class="sqlbody">
     <nav>
       <img src="./img/hacker.png" id="logo" />
       <ul>
@@ -25,18 +25,19 @@
       </ul>
     </nav>
 
-    <div>
-        <h1>SQL</h1>
-        <div>
-            <h2>Wat is SQL?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, quisquam quis necessitatibus nulla architecto cumque saepe rem voluptatem nostrum, mollitia excepturi, perferendis deserunt blanditiis ullam quas sit? Dolorem, consequatur. Debitis ratione repudiandae quos aliquam ad sapiente accusantium tempore cum reprehenderit culpa quia odit voluptatem, quo fuga molestias amet aliquid obcaecati.</p>
+    <div class="sqlcontainer">
+        <h1 class="hoofdstuksql">SQL</h1>
+        <div class="containerimgph2sql">
+          <div class="containerph2sql">
+            <h2 class="sqlh2">Wat is <span class="colorsql">SQL</span>?</h2>
+            <p class="sqlp">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, quisquam quis necessitatibus nulla architecto cumque saepe rem voluptatem nostrum, mollitia excepturi, perferendis deserunt blanditiis ullam quas sit? Dolorem, consequatur. Debitis ratione repudiandae quos aliquam ad sapiente accusantium tempore cum reprehenderit culpa quia odit voluptatem, quo fuga molestias amet aliquid obcaecati.</p>
+          </div>
+        <img class="imgsql" src="./img/mysql.png" alt="">
         </div>
-        <img src="./img/mysql.png" alt="">
+         
     </div>
 
     <footer style="background-color: #00A8C7 ;">Copyright Techniek College Rotterdam</footer>
-
-
 
   </body>
 </html>
