--- a/php.html
+++ b/php.html
@@ -26,18 +26,20 @@
     </nav>
 
 
-    <div>
-        <h1>PHP</h1>
-        <img src="./img/php.png" alt="">
-        <div>
-            <h2>Wat is PHP?</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta architecto beatae, maxime, officiis eveniet eos, fugit quasi necessitatibus rem eligendi recusandae enim. Dicta quas accusantium modi repellat, quaerat maiores in incidunt, perspiciatis, facilis labore blanditiis quos! Cum perspiciatis illum, facere soluta quas at animi saepe quam alias vero! Labore, debitis?</p>
+    <div class="phpcontainer">
+        <h1 class="hoofdstukphp">PHP</h1>
+        <div class="containerimgph2">
+          <img class="imgphp" src="./img/php.png" alt="">
+          <div class="containerph2php">
+              <h2 class="pphp2">Wat is <span class="colorphp">PHP</span>?</h2>
+              <p class="pphp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta architecto beatae, maxime, officiis eveniet eos, fugit quasi necessitatibus rem eligendi recusandae enim. Dicta quas accusantium modi repellat, quaerat maiores in incidunt, perspiciatis, facilis labore blanditiis quos! Cum perspiciatis illum, facere soluta quas at animi saepe quam alias vero! Labore, debitis?</p>
+          </div>
         </div>
     </div>
 
+
+
     <footer style="background-color: #00A8C7 ;">Copyright Techniek College Rotterdam</footer>
-
-
 
 
   </body>
