--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <li><a href="php.html" target="_blank">PHP</a></li>
         <li><a href="mysql.html" target="_blank">SQL</a></li>
         <li><a href="contact.html" target="_blank">Contact</a></li>
+
+        <li class="dropdown"><a href="#" class="dropbtn">Jaar 2</a>
+          <div class="dropdown-content">
+            <a class="dropdownoop" href="">OOP</a>
+            <a class="dropdownlaravel" href="">Laravel</a>
+            <a class="dropdowntesten" href="">Testen</a>
+          </div>
+        </li>
       </ul>
     </nav>
 
