--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     
     <nav>
-      <img href="index.html" src="./img/hacker.png" id="logo" />
+      <img alt="logo" href="index.html" src="./img/hacker.png" id="logo" />
       <ul>
         <li><a href="html-css.html" target="_blank">HTML/CSS</a></li>
         <li><a href="javascript.html" target="_blank">Javascript</a></li>
@@ -25,7 +25,8 @@
         <li><a href="mysql.html" target="_blank">SQL</a></li>
         <li><a href="contact.html" target="_blank">Contact</a></li>
 
-        <li class="dropdown"><a href="#" class="dropbtn">Jaar 2</a>
+        <li class="dropdown">
+          <a href="#" class="dropbtn">Jaar 2</a>
           <div class="dropdown-content">
             <a class="dropdownoop" href="">OOP</a>
             <a class="dropdownlaravel" href="">Laravel</a>
